build/source/actors/global/cppwrap_datatypes.f90


module cppwrap_datatypes

use, intrinsic :: iso_c_binding
use data_types

implicit none
  
contains


! **************************** flagVec ****************************

function new_handle_flagVec() result(handle) bind(C, name='new_handle_flagVec')
  
  type(c_ptr) :: handle
  type(flagVec), pointer :: p
  
  allocate(p)    
  handle = c_loc(p)   
  
end function new_handle_flagVec

!-----------------------------------
subroutine delete_handle_flagVec(handle) bind(C, name='delete_handle_flagVec')
  
  type(c_ptr), intent(in), value :: handle
  type(flagVec), pointer :: p
  
  call c_f_pointer(handle, p)
  deallocate(p)
  
end subroutine delete_handle_flagVec

!-----------------------------------
subroutine set_data_flagVec(handle, array, arr_size) bind(C, name='set_data_flagVec')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(in), value :: arr_size
  integer(c_int), intent(in) :: array(arr_size)
  type(flagVec), pointer :: p
  
  call c_f_pointer(handle, p)    
  if (allocated(p%dat)) then
    if (size(p%dat) /= arr_size) then
      deallocate(p%dat)
      allocate(p%dat(arr_size))
    end if
  else
    allocate(p%dat(arr_size))
  end if
  
  where (array==1)
    p%dat = .true.
  elsewhere
    p%dat = .false.
  end where
  
end subroutine set_data_flagVec

!-----------------------------------
subroutine get_size_data_flagVec(handle, arr_size) bind(C, name='get_size_data_flagVec')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(out) :: arr_size
  type(flagVec), pointer :: p
  
  call c_f_pointer(handle, p)
  if (allocated(p%dat)) then
    arr_size = size(p%dat, kind=c_int)
  else
    arr_size = 0_c_int
  end if
  
end subroutine get_size_data_flagVec

!-----------------------------------
subroutine get_data_flagVec(handle, array) bind(C, name='get_data_flagVec')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(out) :: array(*)
  type(flagVec), pointer :: p
  
  call c_f_pointer(handle, p)
  if (allocated(p%dat)) then
    where (p%dat)
      array(:size(p%dat)) = 1
    elsewhere
      array(:size(p%dat)) = 0
    end where
  end if
  
end subroutine get_data_flagVec

! **************************** var_i ********************************

function new_handle_var_i() result(handle) bind(C, name='new_handle_var_i')
  
  type(c_ptr) :: handle
  type(var_i), pointer :: p
  
  allocate(p)    
  handle = c_loc(p)   
  
end function new_handle_var_i

!-----------------------------------
subroutine delete_handle_var_i(handle) bind(C, name='delete_handle_var_i')
  
  type(c_ptr), intent(in), value :: handle
  type(var_i), pointer :: p
  
  call c_f_pointer(handle, p)
  deallocate(p)
  
end subroutine delete_handle_var_i

!-----------------------------------
subroutine set_data_var_i(handle, array, arr_size) bind(C, name='set_data_var_i')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(in), value :: arr_size
  integer(c_int), intent(in) :: array(arr_size)
  type(var_i), pointer :: p
  
  call c_f_pointer(handle, p)    
  if (allocated(p%var)) then
    if (size(p%var) /= arr_size) then
      deallocate(p%var)
      allocate(p%var(arr_size))
    end if
  else
    allocate(p%var(arr_size))
  end if
  p%var = array
  
end subroutine set_data_var_i

!-----------------------------------
subroutine get_size_data_var_i(handle, arr_size) bind(C, name='get_size_data_var_i')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(out) :: arr_size
  type(var_i), pointer :: p
  
  call c_f_pointer(handle, p)
  if (allocated(p%var)) then
    arr_size = size(p%var, kind=c_int)
  else
    arr_size = 0_c_int
  end if
  
end subroutine get_size_data_var_i

!-----------------------------------
subroutine get_data_var_i(handle, array) bind(C, name='get_data_var_i')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(out) :: array(*)
  type(var_i), pointer :: p
  
  call c_f_pointer(handle, p)
  if (allocated(p%var)) then
    array(:size(p%var)) = p%var
  end if
  
end subroutine get_data_var_i

!-----------------------------------
subroutine get_size_data_typeStruct(handle, arr_size) bind(C, name='get_size_data_typeStruct')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(out) :: arr_size
  type(hru_type), pointer :: hru_data
  
  call c_f_pointer(handle, hru_data)
  if (allocated(hru_data%typeStruct%var)) then
    arr_size = size(hru_data%typeStruct%var, kind=c_int)
  else
    arr_size = 0_c_int
  end if
  
end subroutine get_size_data_typeStruct

!-----------------------------------
subroutine get_data_typeStruct(handle, array) bind(C, name='get_data_typeStruct')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(out) :: array(*)
  type(hru_type), pointer :: hru_data
  
  call c_f_pointer(handle, hru_data)
  if (allocated(hru_data%typeStruct%var)) then
    array(:size(hru_data%typeStruct%var)) = hru_data%typeStruct%var
  end if
  
end subroutine get_data_typeStruct

! **************************** var_i8 ****************************

function new_handle_var_i8() result(handle) bind(C, name='new_handle_var_i8')
  
  type(c_ptr) :: handle
  type(var_i8), pointer :: p
  
  allocate(p)    
  handle = c_loc(p)   
  
end function new_handle_var_i8

!-----------------------------------
subroutine delete_handle_var_i8(handle) bind(C, name='delete_handle_var_i8')
  
  type(c_ptr), intent(in), value :: handle
  type(var_i8), pointer :: p
  
  call c_f_pointer(handle, p)
  deallocate(p)
  
end subroutine delete_handle_var_i8

!-----------------------------------
subroutine set_data_var_i8(handle, array, arr_size) bind(C, name='set_data_var_i8')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(in), value :: arr_size
  integer(c_long), intent(in) :: array(arr_size)
  type(var_i8), pointer :: p
  
  call c_f_pointer(handle, p)    
  if (allocated(p%var)) then
    if (size(p%var) /= arr_size) then
      deallocate(p%var)
      allocate(p%var(arr_size))
    end if
  else
    allocate(p%var(arr_size))
  end if
  p%var = array
  
end subroutine set_data_var_i8

!-----------------------------------
subroutine get_size_data_var_i8(handle, arr_size) bind(C, name='get_size_data_var_i8')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(out) :: arr_size
  type(var_i8), pointer :: p
  
  call c_f_pointer(handle, p)
  if (allocated(p%var)) then
    arr_size = size(p%var, kind=c_int)
  else
    arr_size = 0_c_int
  end if
  
end subroutine get_size_data_var_i8

!-----------------------------------
subroutine get_data_var_i8(handle, array) bind(C, name='get_data_var_i8')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_long), intent(out) :: array(*)
  type(var_i8), pointer :: p
  
  call c_f_pointer(handle, p)
  if (allocated(p%var)) then
    array(:size(p%var)) = p%var
  end if
  
end subroutine get_data_var_i8

! **************************** ilength **************************

function new_handle_ilength() result(handle) bind(C, name='new_handle_ilength')
  
  type(c_ptr) :: handle
  type(ilength), pointer :: p
  
  allocate(p)    
  handle = c_loc(p)   
  
end function new_handle_ilength

!-----------------------------------
subroutine delete_handle_ilength(handle) bind(C, name='delete_handle_ilength')
  
  type(c_ptr), intent(in), value :: handle
  type(ilength), pointer :: p
  
  call c_f_pointer(handle, p)
  deallocate(p)
  
end subroutine delete_handle_ilength

!-----------------------------------
subroutine set_data_ilength(handle, array, arr_size) bind(C, name='set_data_ilength')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(in), value :: arr_size
  integer(c_int), intent(in) :: array(arr_size)
  type(ilength), pointer :: p
  
  call c_f_pointer(handle, p)    
  if (allocated(p%dat)) then
    if (size(p%dat) /= arr_size) then
      deallocate(p%dat)
      allocate(p%dat(arr_size))
    end if
  else
    allocate(p%dat(arr_size))
  end if
  p%dat = array
  
end subroutine set_data_ilength

!-----------------------------------
subroutine get_size_data_ilength(handle, arr_size) bind(C, name='get_size_data_ilength')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(out) :: arr_size
  type(ilength), pointer :: p
  
  call c_f_pointer(handle, p)
  if (allocated(p%dat)) then
    arr_size = size(p%dat, kind=c_int)
  else
    arr_size = 0_c_int
  end if
  
end subroutine get_size_data_ilength

!-----------------------------------
subroutine get_data_ilength(handle, array) bind(C, name='get_data_ilength')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(out) :: array(*)
  type(ilength), pointer :: p
  
  call c_f_pointer(handle, p)
  if (allocated(p%dat)) then
    array(:size(p%dat)) = p%dat
  end if
  
end subroutine get_data_ilength

! **************************** i8length **************************
function new_handle_i8length() result(handle) bind(C, name='new_handle_i8length')
  
  type(c_ptr) :: handle
  type(i8length), pointer :: p
  
  allocate(p)    
  handle = c_loc(p)   
  
end function new_handle_i8length

!-----------------------------------
subroutine delete_handle_i8length(handle) bind(C, name='delete_handle_i8length')
  
  type(c_ptr), intent(in), value :: handle
  type(i8length), pointer :: p
  
  call c_f_pointer(handle, p)
  deallocate(p)
  
end subroutine delete_handle_i8length

!-----------------------------------
subroutine set_data_i8length(handle, array, arr_size) bind(C, name='set_data_i8length')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(in), value :: arr_size
  integer(c_long), intent(in) :: array(arr_size)
  type(i8length), pointer :: p
  
  call c_f_pointer(handle, p)    
  if (allocated(p%dat)) then
    if (size(p%dat) /= arr_size) then
      deallocate(p%dat)
      allocate(p%dat(arr_size))
    end if
  else
    allocate(p%dat(arr_size))
  end if
  p%dat = array
  
end subroutine set_data_i8length

!-----------------------------------
subroutine get_size_data_i8length(handle, arr_size) bind(C, name='get_size_data_i8length')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(out) :: arr_size
  type(i8length), pointer :: p
  
  call c_f_pointer(handle, p)
  if (allocated(p%dat)) then
    arr_size = size(p%dat, kind=c_int)
  else
    arr_size = 0_c_int
  end if
  
end subroutine get_size_data_i8length

!-----------------------------------
subroutine get_data_i8length(handle, array) bind(C, name='get_data_i8length')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_long), intent(out) :: array(*)
  type(i8length), pointer :: p
  
  call c_f_pointer(handle, p)
  if (allocated(p%dat)) then
    array(:size(p%dat)) = p%dat
  end if
  
end subroutine get_data_i8length

! **************************** var_d ********************************

function new_handle_var_d() result(handle) bind(C, name='new_handle_var_d')
  
  type(c_ptr) :: handle
  type(var_d), pointer :: p
  
  allocate(p)    
  handle = c_loc(p)   
  
end function new_handle_var_d

!-----------------------------------
subroutine delete_handle_var_d(handle) bind(C, name='delete_handle_var_d')
  
  type(c_ptr), intent(in), value :: handle
  type(var_d), pointer :: p
  
  call c_f_pointer(handle, p)
  deallocate(p)
  
end subroutine delete_handle_var_d

!-----------------------------------
subroutine set_data_var_d(handle, array, arr_size) bind(C, name='set_data_var_d')
  
  type(c_ptr), intent(in), value :: handle
  integer(c_int), intent(in), value :: arr_size
  real(c_double), intent(in) :: array(arr_size)
  type(var_d), pointer :: p
  
  call c_f_pointer(handle, p)    
  if (allocated(p%var)) then
    if (size(p%var) /= arr_size) then
      deallocate(p%var)
      allocate(p%var(arr_size))
    end if
  else
    allocate(p%var(arr_size))
  end if
  p%var = array
  
end subroutine set_data_var_d
